--- a/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Level and Assets - Albert/PRJ666Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -208,15 +208,15 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Save_Load/LoadGameMenu
+ContentBrowserTab1.SelectedPaths=/Game/Game/Level/TestMaps
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Retry/TestMaps/MainMenuWorld
+LastLevel=/Game/Game/Level/TestMaps/RoomTest1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2099,6 +2099,7 @@ LevelSelectionMenu_C.Clipping=True
 LevelSelectionMenu_C.Navigation=True
 LevelSelectionMenu_C.Localization=True
 NewGame_C.Default=True
+RoomTest2_C.Default=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2243,26 +2244,26 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
+MRUItem0=/Game/Game/Level/TestMaps/RoomTest1
 MRUItem1=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/LevelSelectionMenu
 MRUItem2=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem3=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
-MRUItem4=/Game/Save_Load/LoadGameMenu/NewGame
-MRUItem5=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
-MRUItem6=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
-MRUItem7=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
-MRUItem8=/Game/Game/AnimationBP_Character_BP/SwatMan
-MRUItem9=/Game/NewFolder/Cristian_Menus_Updated/Cristian_Menus/UI/LevelSelectionMenu
-MRUItem10=/Game/Cristian_Menus/UI/MainMenu
-MRUItem11=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu_2
-MRUItem12=/Game/Cristian_Menus_Updated/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
-MRUItem13=/Game/Cristian_Menus_Updated/Cristian_Menus/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
-MRUItem14=/Game/Game/Level/TestMaps/RoomTest2
-MRUItem15=/Game/Game/Level/TestMaps/RoomTest1
-MRUItem16=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem17=/Game/Retry/LevelProps/Dialogue
-MRUItem18=/Game/Game/Level/TestMaps/RoomTest4
-MRUItem19=/Game/Game/Level/TestMaps/Room3
+MRUItem3=/Game/Retry/LevelProps/MovableWall
+MRUItem4=/Game/Retry/Enemies/Ranged/BP/RangedEnemy
+MRUItem5=/Game/Retry/Enemies/Melee/BP/MeleeEnemy
+MRUItem6=/Game/Game/Level/TestMaps/RoomTest2
+MRUItem7=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/Options
+MRUItem8=/Game/Save_Load/LoadGameMenu/NewGame_LoadGame
+MRUItem9=/Game/Save_Load/LoadGameMenu/NewGame
+MRUItem10=/Game/Save_Load/GameInstance_Structs/BorderGunInstance
+MRUItem11=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/PauseMenu
+MRUItem12=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
+MRUItem13=/Game/Game/AnimationBP_Character_BP/SwatMan
+MRUItem14=/Game/NewFolder/Cristian_Menus_Updated/Cristian_Menus/UI/LevelSelectionMenu
+MRUItem15=/Game/Cristian_Menus/UI/MainMenu
+MRUItem16=/Game/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu_2
+MRUItem17=/Game/Cristian_Menus_Updated/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
+MRUItem18=/Game/Cristian_Menus_Updated/Cristian_Menus/Cristian_Menus_Updated/Cristian_Menus/UI/MainMenu
+MRUItem19=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -2590,17 +2591,17 @@ CharacterMovementComponent="\"Object.Character Movement (Rotation Settings).Rota
 PawnMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
 MovementComponent=
-ActorComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.Audio.DefaultAmbientZoneSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 SkeletalMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SkinnedMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[4]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
 SwatMan_C="\"Object.Pause Menu Ref\" "
-Character="\"Object.Pause Menu Ref\" "
-Pawn="\"Object.Pause Menu Ref\" "
+Character=
+Pawn=
 CapsuleComponent=
 ShapeComponent=
 Movement_C=
@@ -2671,7 +2672,7 @@ EnvQueryTest="\"Object.Trace.TraceFromContext\" "
 EnvQueryNode=
 ArrowComponent="\"Object.Rendering.CustomPrimitiveData\" "
 Tutorial1_C=
-LevelScriptActor=
+LevelScriptActor="\"Object.MovedWall\" "
 Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
 EndTunnel_C=
 AmmoPacket_C=
@@ -2729,6 +2730,7 @@ NewGame_C=
 BorderGunInstance_C=
 GameInstance=
 LevelSelectionMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" \"Object.Render Transform.RenderTransform.Scale\" \"Object.Render Transform.RenderTransform.Shear\" \"Object.Render Transform.RenderTransformPivot\" "
+RoomTest2_C="\"Object.MovedWall\" "
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2018
@@ -2760,7 +2762,7 @@ WindowSize=X=947.000 Y=938.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Retry/TestMaps
+UNR=../../../../Users/Stephen/Desktop/Final Project/BorderGun/BorderGun/Level and Assets - Albert/PRJ666Game/Content/Game/Level/TestMaps
 BRUSH=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBX=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
 FBXAnim=../../../../Users/Stephen/Desktop/Final Project/Workstation/Content/
@@ -3624,9 +3626,9 @@ DistCurveEditor.TimeStamp=2021.02.04-17.25.37
 DistCurveEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Retry/TestMaps/MainMenuWorld
-MRUItem1=/Game/Game/Level/TestMaps/RoomTest2
-MRUItem2=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem0=/Game/Game/Level/TestMaps/RoomTest1
+MRUItem1=/Game/Retry/TestMaps/MainMenuWorld
+MRUItem2=/Game/Game/Level/TestMaps/RoomTest2
 MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem4=/Game/Game/Level/TestMaps/RoomTest4
 MRUItem5=/Game/Game/Level/TestMaps/Room3
@@ -3788,6 +3790,8 @@ NewGame_LoadGame_C=
 NewGame_C=
 K2Node_SetFieldsInStruct=K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 BorderGunInstance_C=
+RoomTest2_C=
+LevelSelectionMenu_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
